[package]
name = "opengraph_transform"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
codegen-units = 1

[dependencies]
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
serde = "1"
swc = "0.264.55"
getrandom = { version = "0.2.10", features = ["js"] }
swc_core = { version = "0.79", features = [
    "ecma_plugin_transform",
    "ecma_utils",
    "ecma_minifier",
    "ecma_visit",
    "ecma_ast",
    "ecma_parser",
    "common",
] }

[dev-dependencies]
testing = "0.33"
swc_core = { version = "0.79", features = ["testing_transform", "ecma_parser"] }
